--- a/public/index.html
+++ b/public/index.html
@@ -105,3 +105,24 @@
                 <button class="category-btn" onclick="filterCategory('Surgery', this)" style="padding: 0.5rem 1rem; border-radius: 6px; border: 2px solid #e9ecef; font-weight: 600; cursor: pointer; transition: all 150ms; background: transparent;">🏥 Surgery</button>
                 <button class="category-btn" onclick="filterCategory('Other', this)" style="padding: 0.5rem 1rem; border-radius: 6px; border: 2px solid #e9ecef; font-weight: 600; cursor: pointer; transition: all 150ms; background: transparent;">📋 Other</button>
             </div>
+
+                        <!-- Cases Grid -->
+            <div class="card-grid" id="categoryCases">
+                <div class="case-card-skeleton">
+                    <div class="skeleton-header"></div>
+                    <div class="skeleton-text"></div>
+                    <div class="skeleton-text short"></div>
+                </div>
+                <div class="case-card-skeleton">
+                    <div class="skeleton-header"></div>
+                    <div class="skeleton-text"></div>
+                    <div class="skeleton-text short"></div>
+                </div>
+                <div class="case-card-skeleton">
+                    <div class="skeleton-header"></div>
+                    <div class="skeleton-text"></div>
+                    <div class="skeleton-text short"></div>
+                </div>
+            </div>
+        </div>
+    </section>
